proj-box width - fixed horizontal scroll bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,7 +103,7 @@ a:hover, a:active{
 
 
 #proj-box{
-  width: 100%;
+  width: 95%;
   padding-bottom: 1%;
 }
 
